--- a/logHouse/_attachments/index.html
+++ b/logHouse/_attachments/index.html
@@ -1,14 +1,57 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+ 
 <html>
-  <head>
-    <title>Generated CouchApp</title>
-    <link rel="stylesheet" href="style/main.css" type="text/css">
-  </head>
-  <body>
-    <h1>Generated CouchApp</h1>
-    <p>This is a placeholder page</p>
-  </body>
-  <script src="/_utils/script/json2.js"></script>
-  <script src="/_utils/script/jquery.js?1.3.1"></script>
-  <script src="/_utils/script/jquery.couch.js?0.9.0"></script>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>apache loghouse</title>
+
+    <!-- Framework CSS -->
+    <link rel="stylesheet" href="style/screen.css" type="text/css" media="screen, projection" />
+    <link rel="stylesheet" href="style/print.css" type="text/css" media="print" />
+    <!--[if IE]><link rel="stylesheet" href="css/ie.css" type="text/css" media="screen, projection"><![endif]-->
+    <link rel="stylesheet" href="style/loghouse.css" type="text/css" media="screen, projection" />
+    <script language="JavaScript" type="text/javascript" src="/_utils/script/json2.js"></script>
+    <script language="JavaScript" type="text/javascript" src="/_utils/script/jquery.js?1.3.1"></script>
+    <script language="JavaScript" type="text/javascript" src="/_utils/script/jquery.couch.js?0.9.1"></script>
+</head>
+
+<body>
+
+<div class="container">
+
+<span class="space">&nbsp;</span>
+
+<div class="span-24 last">
+    <h1>apache_loghouse</h1>
+    <hr class="space" />
+</div>
+
+<div class="span-3 colborder">
+
+    <div id="shortcuts">
+        <h3 class="caps">shortcuts</h3>
+
+        <div class="prepend-1">
+            <p> <a href="index.html">home</a><br/> </p>
+        </div>
+
+    </div>
+
+    <div id="sidebar" />
+
+</div>
+ 
+<div id="content" class="span-19 last">
+
+    <div id="uris" />
+
+    <div id="codes" />
+
+    <div id="referrers" />
+
+    <div id="codes" />
+
+</div>
+
+</body>
 </html>
